--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="txt_field">
                 <input type="text" required name="entry.2088633237">
                 <span></span>
-                <label for="entry.2088633237">Name of the members in the team (4 members)</label>
+                <label for="entry.2088633237">Name of the members in the team (1-4 members)</label>
              </div>
             <div class="txt_field">
                 <input type="text" required name="entry.2116883070">
